# graph-algo-ptas

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci-cd.yml  docs.yml  pages.yml  publish.yml
benches/: embedding_benchmark.rs  embeding_benchmark.rs  generation_benchmark.rs  max_independent_set_benchmark.rs  min_vertex_cover_benchmark.rs
docs/: algorithm.md  benchmarks.md  data_structure.md
src/: lib.rs  main.rs
src/algorithm/: dualgraph.rs  dynamic_programming.rs  leveling.rs  mod.rs  nice_tree_decomposition.rs  ptas.rs  spantree.rs  tree_decomposition.rs  triangulation.rs
src/algorithm/dynamic_programming/: max_independent_set.rs  min_vertex_cover.rs  mod.rs  solve.rs  utils.rs
src/data_structure/: dot_reader.rs  dot_renderer.rs  graph.rs  graph_dcel.rs  graph_types.rs  link_graph.rs  list_graph.rs  map_graph.rs  mod.rs  ring_segment.rs
src/data_structure/dcel/: dcel_map_graph.rs  graph_dcel.rs  mod.rs
src/data_structure/link_graph/: example.rs
src/debug/: list_graph.rs  mod.rs
src/embedding/: index.rs  mod.rs
src/embedding/maximal_planar/: index.rs  mod.rs  phase1.rs  phase2.rs  phase3.rs
src/embeding/: index.rs  maximal_planar.rs  mod.rs
src/embeding/maximal_planar/: index.rs  mod.rs  phase1.rs  phase2.rs  phase3.rs  stack_item.rs
src/generation/: erdos_renyi.rs  mod.rs  planar.rs
src/utils/: circle.rs  convert.rs  max_independent_set.rs  min_vertex_cover.rs  mod.rs  random_graph.rs  single_face.rs
