[package]
name = "graph-algo-ptas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboretum-td = "0.1.0"
dot = "0.1.4"
fxhash = "0.2.1"
bitvec = "1.0.1"
itertools = "0.10.3"
rand = "0.8.5"
petgraph = "0.6.2"

[features]
debug_graph_generation = []
debug_link_graph_panic_on_double_edges = []

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "embeding_benchmark"
harness = false
