[package]
name = "graph-algo-ptas"
description = "PTAS on planars and other graph classes"
version = "0.1.0"
edition = "2021"
authors = ["Dominik Kröll", "David Martschenko", "Jonas-Ian Kuche", "Max Stephan", "Pia-Doreen Ritzke", "Timon Pellekoorne"]
readme = "README.md"
repository = "https://github.com/thm-mni-ii/graph-algo-ptas"
documentation = "https://thm-mni-ii.github.io/graph-algo-ptas/graph_algo_ptas"
license = "MIT"
exclude = [".github", ".vscode", "docs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboretum-td = "0.1.0"
dot = "0.1.4"
fxhash = "0.2.1"
bitvec = "1.0.1"
itertools = "0.10.3"
rand = "0.8.5"
petgraph = "0.6.2"

[features]
debug_graph_generation = []
debug_link_graph_panic_on_double_edges = []

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
name = "embedding_benchmark"
harness = false

[[bench]]
name = "generation_benchmark"
harness = false

[[bench]]
name = "max_independent_set_benchmark"
harness = false
